--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="box2">
             <h2>Shiv Kumar</h2>
-            <h3>Coder and Ethical Hacker</h3>
+            <h3>Coder and Web Developer</h3>
             <div class="socials">
                 <div class="link">
             <a href="https://www.facebook.com">
