--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
             <h3>Coder and Web Developer</h3>
             <div class="socials">
                 <div class="link">
-            <a href="https://www.facebook.com">
+            <a href="https://www.facebook.com/profile.php?id=100049715705106">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRY-F6SQ7c9uQle_EBuDp_YYCJBLB9f8iX0pf6X115SuA&s" alt="facebook" class="logosize">
             </a></div>
             <div class="link">
-            <a href="https://www.twitter.com">
+            <a href="https://twitter.com/shivkumar7489">
                 <img src="https://cdn.pixabay.com/photo/2017/08/23/11/30/twitter-2672572_1280.jpg" alt="twitter" class="logosize">
             </a></div>
             <div class="link">
-            <a href="https://www.instagram.com">
+            <a href="https://www.instagram.com/_sam7489/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt="instagram" class="logosize">
             </a></div>
             <div class="link">
-            <a href="https://www.youtube.com">
+            <a href="https://www.youtube.com/channel/UCAsAzQ8Z_-FEE5YqHg9ueZw">
                 <img src="https://static-00.iconduck.com/assets.00/youtube-icon-2048x2048-wiwalbpx.png" alt="youtube" class="logosize">
             </a></div>
             
