--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm learnign</h3>
+          <h3 class="h3 service-title">What i'm learning</h3>
 
           <ul class="service-list">
 
