--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:wnxsam89@gmail.com" class="contact-link">wnxsam89@gmail.com</a>
+              <a href="mailto:shivam@wnxsam.cloud" class="contact-link">shivam@wnxsam.cloud</a>
             </div>
 
           </li>
