--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sam7489 - Personal Portfolio</title>
+  <title>Sam7489 - Begusarai</title>
 
   <!--
     - favicon
