--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
           </p>
 
           <p>
-            I will try to build your website so that it is functional and user-friendly but at the same time attractive.
+            I try to build website so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            add personal touch to the product and make sure that it is eye-catching and easy to use. My aim is to bring
+            across 
+            message and identity in the most creative way.
           </p>
         </section>
 
