--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Shiv Kumar" width="80">
+          <img src="./sam-removebg-preview.png" alt="Shiv Kumar" width="80" style="border-radius: 35px; filter: brightness(87%)">
         </figure>
 
         <div class="info-content">
